[gd_scene load_steps=27 format=3 uid="uid://ifnm35j8kb1y"]

[ext_resource type="PackedScene" uid="uid://chq1lkece1wur" path="res://cooking/food_step.tscn" id="1_wtsfb"]
[ext_resource type="Script" path="res://cooking/steps/piping_line/piping_line_minigame.gd" id="2_mcpkt"]
[ext_resource type="Script" path="res://cooking/steps/piping_line/piping_bag_visuals.gd" id="5_7684g"]
[ext_resource type="Texture2D" uid="uid://cj72sisb6318w" path="res://cooking/steps/piping_line/PipingBagFull.png" id="6_o4k7v"]
[ext_resource type="Texture2D" uid="uid://cinpe424kp5k1" path="res://cooking/steps/piping_line/PipingBagEmpty.png" id="7_an37g"]
[ext_resource type="Texture2D" uid="uid://daf2fqlqruief" path="res://items/foods/art/SweetRollUpdated.png" id="7_oltjc"]
[ext_resource type="Script" path="res://cooking/steps/piping_line/puff_roll_visuals.gd" id="8_do5x4"]
[ext_resource type="Texture2D" uid="uid://ddguiyp5vl5nr" path="res://cooking/steps/piping_line/icing_layer.png" id="8_m8dr4"]
[ext_resource type="PackedScene" uid="uid://bx3c2sms6ejy2" path="res://cooking/steps/instructions_panel.tscn" id="8_xa70s"]
[ext_resource type="Texture2D" uid="uid://cgiyidyfi44mc" path="res://items/foods/art/PuffRoll_Empty.png" id="9_o6gau"]
[ext_resource type="Texture2D" uid="uid://dml75s4v7v8nc" path="res://items/foods/art/PuffRoll_Baclava.png" id="10_oswa0"]
[ext_resource type="Script" path="res://cooking/steps/piping_line/sweet_roll_visuals.gd" id="11_4e3nr"]
[ext_resource type="Texture2D" uid="uid://c1hoxmyh44c8x" path="res://items/foods/art/OrangeSweetRoll.png" id="11_d83i6"]
[ext_resource type="Script" path="res://cooking/steps/piping_line/speed_dial.gd" id="14_oj1ao"]
[ext_resource type="Texture2D" uid="uid://b5nuf582dnca1" path="res://cooking/steps/piping_line/speed_guage.png" id="15_i0gk5"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_odmsh"]
light_mode = 2

[sub_resource type="Gradient" id="Gradient_ea3s7"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s6b28"]
gradient = SubResource("Gradient_ea3s7")
width = 160
height = 285
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_gebea"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_36csd"]
gradient = SubResource("Gradient_gebea")
width = 200
height = 20
fill_from = Vector2(1, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ctg8y"]
light_mode = 2

[sub_resource type="Gradient" id="Gradient_onvju"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e4v36"]
gradient = SubResource("Gradient_onvju")
width = 200
height = 128

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_i3v1x"]
light_mode = 2

[sub_resource type="Gradient" id="Gradient_5xdm5"]
offsets = PackedFloat32Array(0, 0.551948, 0.701299)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tja1f"]
gradient = SubResource("Gradient_5xdm5")
width = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[node name="PipeLine" instance=ExtResource("1_wtsfb")]
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("2_mcpkt")
percent_piped_per_pixel_per_second = 10.0
piping_bag_idle_pos = Vector2(451, 376)
piping_bag_using_pos = Vector2(448, 455)
target_piping_speed = 0.5
target_tolerance = 0.2
drag_distance_average_amount = 10

[node name="PipingBag" type="Node2D" parent="." index="0"]
z_index = 1
position = Vector2(451, 376)
rotation = 0.872665
script = ExtResource("5_7684g")

[node name="Sprites" type="Node2D" parent="PipingBag" index="0"]
position = Vector2(30, -72)
scale = Vector2(1.6, 1.6)

[node name="PipingBagFull" type="Sprite2D" parent="PipingBag/Sprites" index="0"]
material = SubResource("CanvasItemMaterial_odmsh")
texture = ExtResource("6_o4k7v")
flip_h = true

[node name="PipingBagEmpty" type="Sprite2D" parent="PipingBag/Sprites" index="1"]
texture = ExtResource("7_an37g")
flip_h = true

[node name="IcingMasks" type="Node2D" parent="PipingBag" index="1"]
clip_children = 1
position = Vector2(-171.18, -114.918)
rotation = -0.785398

[node name="FullMask" type="PointLight2D" parent="PipingBag/IcingMasks" index="0"]
texture = SubResource("GradientTexture2D_s6b28")

[node name="FadeMask" type="PointLight2D" parent="PipingBag/IcingMasks/FullMask" index="0"]
position = Vector2(-6.364, -151.447)
texture = SubResource("GradientTexture2D_36csd")

[node name="EmptyMask" type="PointLight2D" parent="PipingBag/IcingMasks" index="1"]
position = Vector2(-11.4398, -99.9375)
rotation = -0.785398
color = Color(0, 0, 0, 1)
texture = ExtResource("8_m8dr4")
texture_scale = 2.8

[node name="InstructionsPanel" parent="." index="1" instance=ExtResource("8_xa70s")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
minigame_title = "Pipe Filling"
instructions = "Click and drag downwards at the correct speed to evenly distribute the icing."

[node name="PuffRoll" type="Node2D" parent="." index="2"]
script = ExtResource("8_do5x4")

[node name="Sprites" type="Node2D" parent="PuffRoll" index="0"]
position = Vector2(427, 561)
rotation = -1.65806
scale = Vector2(0.7, 0.7)

[node name="PastryHollow" type="Sprite2D" parent="PuffRoll/Sprites" index="0"]
texture = ExtResource("9_o6gau")

[node name="PastryFull" type="Sprite2D" parent="PuffRoll/Sprites" index="1"]
material = SubResource("CanvasItemMaterial_ctg8y")
texture = ExtResource("10_oswa0")

[node name="Mask" type="Node2D" parent="PuffRoll" index="1"]
position = Vector2(414, 573)

[node name="FillingMask" type="PointLight2D" parent="PuffRoll/Mask" index="0"]
color = Color(0, 0, 0, 1)
texture = SubResource("GradientTexture2D_e4v36")

[node name="SweetRoll" type="Node2D" parent="." index="3"]
visible = false
script = ExtResource("11_4e3nr")

[node name="Sprites" type="Node2D" parent="SweetRoll" index="0"]

[node name="UnglazedRoll" type="Sprite2D" parent="SweetRoll/Sprites" index="0"]
position = Vector2(407, 538)
scale = Vector2(0.238255, 0.238255)
texture = ExtResource("7_oltjc")

[node name="GlazedRoll" type="Sprite2D" parent="SweetRoll/Sprites" index="1"]
material = SubResource("CanvasItemMaterial_i3v1x")
position = Vector2(407, 538)
scale = Vector2(0.238255, 0.238255)
texture = ExtResource("11_d83i6")

[node name="GlazeMask" type="PointLight2D" parent="SweetRoll" index="1"]
position = Vector2(410, 528)
scale = Vector2(1e-05, 1e-05)
texture = SubResource("GradientTexture2D_tja1f")

[node name="SpeedDial" type="Node2D" parent="." index="4"]
script = ExtResource("14_oj1ao")

[node name="Sprite2D" type="Sprite2D" parent="SpeedDial" index="0"]
position = Vector2(577, 257)
scale = Vector2(0.21, 0.21)
texture = ExtResource("15_i0gk5")
